--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "catbird-analytics"
+  title: "Catbird Analytics"
   navbar:
     right:
       - about.qmd
