--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,10 +2,13 @@ project:
   type: website
 
 website:
-  title: "Home"
+  title: "Catbird Analytics"
   navbar:
-    right:
+    left: 
+      - text: "Home"
+        file: index.qmd
       - about.qmd
+    right:
       - icon: linkedin
         href: https://www.linkedin.com/in/johnyuill/
       - icon: github
