trying to get styles right

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,8 +20,9 @@ website:
   cookie-consent: true
 format:
   html:
-    theme: cosmo
+    theme: 
+    - cosmo
+    - custom.scss
     css: styles.css
-
 editor: visual
 
