setting up for testing portfolio page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ website:
     left: 
       - text: "Home"
         file: index.qmd
+      - portfolio.qmd
       - about.qmd
     right:
       - icon: linkedin
