--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,8 @@ project:
 website:
   title: "Catbird Analytics"
   navbar:
-    background: "#333"
+    #background: "#333"
+    background: "#000000"
     left: 
       - text: "Home"
         file: index.qmd
