--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,8 +4,7 @@ project:
 website:
   title: "Catbird Analytics"
   navbar:
-    #background: "#333"
-    background: "#000000"
+    background: "#14213D"
     left: 
       - text: "Home"
         file: index.qmd
